--- a/index.html
+++ b/index.html
@@ -3,25 +3,44 @@
 <head>
   <title>fanStop</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
+ <link rel="stylesheet" type="text/css" href="/css/style.css">
+
   <!-- If you must use outside libs that aren't Angular-specific, include them BEFORE Angular. -->
   <script src="js/jwt-decode.2.0.1.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-resource.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+  <!-- Style (optional) -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFuqFzNpJnxqpGGH4gDIKTD6ENV1Imt2c&libraries=places"></script>
+
 
 </head>
 <body>
-{{1+1}}
+  <div class="container-fluid">
+    <header ng-controller="NavbarCtrl as nav">
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <a ui-sref="welcome" class="navbar-brand">Home</a>
+          <button ng-hide="nav.authService.isLoggedIn()" ui-sref="signin" type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
+          <button ng-show="nav.authService.isLoggedIn()" ng-click= "nav.authService.logOut()" type="button" class="btn btn-default navbar-btn navbar-right">Sign out</button>
+        </div>
+      </nav>
+    </header>
+    <br>
+    <br>bb
     <main class="content" ui-view>
       <!-- ui-router (aka ui.router) inserts templates here -->
     </main>
 
 
-  <script src="js/app.js"></script>
-  <script src="js/app.routes.js"></script>
-  <script src="js/tokens.js"></script>
-  <script src="js/authService.js"></script>
-  <script src="js/userService.js"></script>
-  <script src="js/signin.controller.js"></script>
+  <script src='js/app.js'></script>
+  <script src='js/app.routes.js'></script>
+  <script src='js/tokens.js'></script>
+  <script src='js/authService.js'></script>
+  <script src='js/userService.js'></script>
+  <script src='js/signin.controller.js'></script>
+  <script src='js/NavbarCtrl.js'></script>
+  <script src="js/googleMapsController.js" charset="utf-8"></script>
 </body>
 </html>
