setting up gh pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </nav>
     </header>
     <br>
-    <br>bb
+    <br>
+    <h1> FanStop</h1>
     <main class="content" ui-view>
       <!-- ui-router (aka ui.router) inserts templates here -->
     </main>
