--- a/pages/results.html
+++ b/pages/results.html
@@ -2,6 +2,6 @@
 <div id='map'></div>
 
 <button ng-click='gMaps.initialize()' name="button">fuck</button>
-<li ng-repeat='place in gMaps.placesList'>
+<ul id='places'>
   {{place.place.name}}
-</li>
+</ul>
