--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>fanStop</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
- <link rel="stylesheet" type="text/css" href="/css/style.css">
+ <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- If you must use outside libs that aren't Angular-specific, include them BEFORE Angular. -->
   <script src="js/jwt-decode.2.0.1.js"></script>
