--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -1,2 +1,15 @@
-<h1> hello there  </h1>
-<a href='#/sign-in'> fuck you</a>
+<!-- <div map-lazy-load="https://maps.google.com/maps/api/js">
+  <ng-map center="34,-118" zoom="12"></ng-map>
+</div>
+<button ng-click='gMaps.initialize()' name="button"></button>
+<ul id='places' ng-repeat="business in gMaps.businesses">
+<li>  {{business.name}} </li>
+</ul> -->
+<div class="wrap">
+<div class="apps">
+  <h1 id='fanTitle'> Welcome to FanStop!</h1>
+<div class="football"></div> <div class="beer"></div><div class="crowd"></div>
+</div>
+
+</div>
+<a href='/#/results'>lets get that</a>
