--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <a ui-sref="welcome" class="navbar-brand">Home</a>
+          <a ui-sref='results' class='navbar-brand'>Let's Drink!</a>
           <button ng-hide="nav.authService.isLoggedIn()" ui-sref="signin" type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
           <button ng-show="nav.authService.isLoggedIn()" ng-click= "nav.authService.logOut()" type="button" class="btn btn-default navbar-btn navbar-right">Sign out</button>
         </div>
@@ -35,7 +36,6 @@
     </header>
     <br>
     <br>
-    <h1> FanStop</h1>
 
     <main class="content" ui-view>
       <h2> loading.... </h2>
