--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -5,6 +5,7 @@
 <ul id='places' ng-repeat="business in gMaps.businesses">
 <li>  {{business.name}} </li>
 </ul> -->
+<div id='bground'>
 <div class="wrap">
 <div class="apps">
   <h1 id='fanTitle'> Welcome to FanStop!</h1>
@@ -13,3 +14,5 @@
 
 </div>
 <a href='/#/results'>lets get that</a>
+
+</div>
