--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <script data-require="angular-google-maps@*" data-semver="2.0.11" src="//rawgit.com/angular-ui/angular-google-maps/master/dist/angular-google-maps.min.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-resource.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
-  <script src="/bower_components/oauth-signature/dist/oauth-signature.js"></script>
+  <script src="/js/config/oauth-signature.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFuqFzNpJnxqpGGH4gDIKTD6ENV1Imt2c&libraries=places"></script>
 
 
