--- a/pages/results.html
+++ b/pages/results.html
@@ -3,9 +3,9 @@
 </div>
 <ul id='places'>
 <li ng-repeat="business in gMaps.bars" style='width: 500px; height:75px;'>  Bar Name: {{business.name}} <br> Address: {{business.address}}
-<span> <select ng-model="business.newVote" ng-options="team.name for team in gMaps.teams"> <img src='{{team.icon}}'style='height:50px; width:50px; float:right;'></select> 
+<span> <select ng-model="business.newVote" ng-options="team.name for team in gMaps.teams"> </select> <img src='{{gMaps.team.icon}}'style='height:50px; width:50px; float:right;'>
 
-<br><button class="btn btn-success btn-xs" ng-click="gMaps.updateBar(business)">Save</button>
+<br><button class="btn btn-success btn-xs" ng-click="gMaps.updateBar(business)">Vote!</button>
 
 </li>
 </ul>
